Wrap in document.ready() and fix display logic.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,9 @@ body {
     line-size: 50px;
 }
 
+#instructions {
+}
+#guess {
+    display: none;
+}
+
